# rest_rs

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
src/auth/: mod.rs
src/controllers/: auth.rs  authors.rs  books.rs  mod.rs
src/db/: mod.rs
src/entities/: author.rs  book.rs  mod.rs  prelude.rs  user.rs
src/fairings/: cors.rs
src/migrator/: m20220101_000001_create_user_table.rs  m20240213_111018_create_author_table.rs  m20240213_112544_create_book_table.rs  mod.rs
